fix: testimonials intro & image gap

--- a/src/styles/testimonials.scss
+++ b/src/styles/testimonials.scss
@@ -44,7 +44,7 @@
   &__intro {
     display: flex;
     margin-bottom: pxToVw(16);
-    gap: pxToVw(20);
+    gap: pxToVw(25);
     align-items: center;
     position: relative;
 
